исправил тесты, для поднятия контекста используется только ManagementServiceTest в связи с подкапотной реализацией кеширования