@@ -4,29 +4,26 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.sky_pro.team_work.domain.Query;
 import org.sky_pro.team_work.domain.Rule;
 import org.sky_pro.team_work.enums.ProductType;
 import org.sky_pro.team_work.enums.QueryType;
 import org.sky_pro.team_work.repository.RecommendationsRepository;
 import org.sky_pro.team_work.service.RuleCheckerService;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-import java.util.Arrays;
+
+import java.util.List;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.when;
 
-@ExtendWith(SpringExtension.class)
-@SpringBootTest
+@ExtendWith(MockitoExtension.class)
 public class RuleCheckerServiceTest {
-
     @InjectMocks
     private RuleCheckerService ruleCheckerService;
-
     @Mock
     private RecommendationsRepository repository;
 
@@ -37,16 +34,16 @@ public class RuleCheckerServiceTest {
 
         Query query1 = new Query();
         query1.setQueryType(QueryType.USER_OF);
-        query1.setArguments(Arrays.asList("DEBIT"));
+        query1.setArguments(List.of("DEBIT"));
 
         Query query2 = new Query();
         query2.setQueryType(QueryType.ACTIVE_USER_OF);
-        query2.setArguments(Arrays.asList("DEBIT"));
+        query2.setArguments(List.of("DEBIT"));
 
-        rule.setQuery(Arrays.asList(query1, query2));
+        rule.setQuery(List.of(query1, query2));
 
-        Mockito.when(repository.checkUserOf(userId, ProductType.DEBIT)).thenReturn(true);
-        Mockito.when(repository.checkActiveUserOf(userId, ProductType.DEBIT)).thenReturn(true);
+        when(repository.checkUserOf(userId, ProductType.DEBIT)).thenReturn(true);
+        when(repository.checkActiveUserOf(userId, ProductType.DEBIT)).thenReturn(true);
 
         boolean result = ruleCheckerService.checkUserByRule(userId, rule);
 
@@ -60,16 +57,16 @@ public class RuleCheckerServiceTest {
 
         Query query1 = new Query();
         query1.setQueryType(QueryType.USER_OF);
-        query1.setArguments(Arrays.asList("DEBIT"));
+        query1.setArguments(List.of("DEBIT"));
 
         Query query2 = new Query();
         query2.setQueryType(QueryType.ACTIVE_USER_OF);
-        query2.setArguments(Arrays.asList("DEBIT"));
+        query2.setArguments(List.of("DEBIT"));
 
-        rule.setQuery(Arrays.asList(query1, query2));
+        rule.setQuery(List.of(query1, query2));
 
-        Mockito.when(repository.checkUserOf(userId, ProductType.DEBIT)).thenReturn(true);
-        Mockito.when(repository.checkActiveUserOf(userId, ProductType.DEBIT)).thenReturn(false);
+        when(repository.checkUserOf(userId, ProductType.DEBIT)).thenReturn(true);
+        when(repository.checkActiveUserOf(userId, ProductType.DEBIT)).thenReturn(false);
 
         boolean result = ruleCheckerService.checkUserByRule(userId, rule);
 
@@ -84,14 +81,14 @@ public class RuleCheckerServiceTest {
         Query query = new Query();
         query.setQueryType(QueryType.USER_OF);
         query.setNegate(true);
-        query.setArguments(Arrays.asList("DEBIT"));
+        query.setArguments(List.of("DEBIT"));
 
-        rule.setQuery(Arrays.asList(query));
+        rule.setQuery(List.of(query));
 
-        Mockito.when(repository.checkUserOf(userId, ProductType.DEBIT)).thenReturn(true);
+        when(repository.checkUserOf(userId, ProductType.DEBIT)).thenReturn(true);
 
         boolean result = ruleCheckerService.checkUserByRule(userId, rule);
 
-         assertFalse(result);
+        assertFalse(result);
     }
 }
