@@ -5,6 +5,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.sky_pro.team_work.domain.Query;
 import org.sky_pro.team_work.domain.Rule;
 import org.sky_pro.team_work.domain.RuleStatistic;
@@ -12,22 +13,20 @@ import org.sky_pro.team_work.dto.RuleStatisticDto;
 import org.sky_pro.team_work.exception.RuleNotFoundException;
 import org.sky_pro.team_work.repository.RuleRepository;
 import org.sky_pro.team_work.service.RuleService;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+
 
 import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
-@ExtendWith(SpringExtension.class)
-@SpringBootTest
+@ExtendWith(MockitoExtension.class)
 public class RuleServiceTest {
-
     @InjectMocks
     private RuleService ruleService;
-
     @Mock
     private RuleRepository repository;
 
@@ -37,15 +36,15 @@ public class RuleServiceTest {
         rule1.setProductName("Product 1");
         rule1.setProductId("product-1-id");
         rule1.setProductText("Description 1");
-        rule1.setQuery(Arrays.asList(new Query()));
+        rule1.setQuery(List.of(new Query()));
 
         Rule rule2 = new Rule();
         rule2.setProductName("Product 2");
         rule2.setProductId("product-2-id");
         rule2.setProductText("Description 2");
-        rule2.setQuery(Arrays.asList(new Query()));
+        rule2.setQuery(List.of(new Query()));
 
-        Mockito.when(repository.findAllWithQueries()).thenReturn(Arrays.asList(rule1, rule2));
+        when(repository.findAllWithQueries()).thenReturn(Arrays.asList(rule1, rule2));
 
         List<Rule> result = ruleService.getAll();
 
@@ -59,30 +58,30 @@ public class RuleServiceTest {
         Rule rule = new Rule();
         rule.setProductName("New Product");
 
-        Mockito.when(repository.save(rule)).thenReturn(rule);
+        when(repository.save(rule)).thenReturn(rule);
 
         Rule result = ruleService.add(rule);
 
         assertEquals(rule, result);
-        Mockito.verify(repository, Mockito.times(1)).save(rule);
+        verify(repository, Mockito.times(1)).save(rule);
     }
 
     @Test
     public void testDelete_ValidId_DeletesRule() {
         Long id = 1L;
 
-        Mockito.when(repository.existsById(id)).thenReturn(true);
+        when(repository.existsById(id)).thenReturn(true);
 
         ruleService.delete(id);
 
-        Mockito.verify(repository, Mockito.times(1)).deleteById(id);
+        verify(repository, Mockito.times(1)).deleteById(id);
     }
 
     @Test
     public void testDelete_InvalidId_ThrowsRuleNotFoundException() {
         Long id = 1L;
 
-        Mockito.when(repository.existsById(id)).thenReturn(false);
+        when(repository.existsById(id)).thenReturn(false);
 
         RuleNotFoundException exception = assertThrows(RuleNotFoundException.class, () -> {
             ruleService.delete(id);
@@ -101,12 +100,12 @@ public class RuleServiceTest {
 
         rule.setRuleStatistic(statistic);
 
-        Mockito.when(repository.findAll()).thenReturn(Arrays.asList(rule));
+        when(repository.findAll()).thenReturn(List.of(rule));
 
         List<RuleStatisticDto> result = ruleService.getRuleStatistics();
 
         assertEquals(1, result.size());
-        assertEquals(Long.valueOf(1), result.get(0).getRule_id());
-        assertEquals(5, result.get(0).getCount());
+        assertEquals(Long.valueOf(1), result.getFirst().getRule_id());
+        assertEquals(5, result.getFirst().getCount());
     }
 }
